--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "sqlalchemy==2.0.41",
     "sqlmodel==0.0.24",
     "types-lxml==2025.3.30",
+    "uvicorn==0.35.0",
     "uvloop==0.21.0",
 ]
 requires-python = ">= 3.11"
@@ -73,6 +74,14 @@ disallow_untyped_defs = true
 
 
 [tool.poe.tasks]
+
+[tool.poe.tasks.dev]
+help   = "Run the backend in development mode"
+shell = "uv run uvicorn app.main:app --reload --host 0.0.0.0 --port 6969"
+
+[tool.poe.tasks.prod]
+help   = "Run the backend in development mode"
+shell = "uv run hypercorn app.main:app --bind 0.0.0.0 --port 6969"
 
 [tool.poe.tasks.test]
 help   = "Run tests on the project"
