--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,4 +1,6 @@
 [alembic]
+# path to migration scripts
+script_location = alembic
 
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
