--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "alembic==1.16.4",
     "asyncpg==0.30.0",
     "browser-use[memory]==0.2.5",
-    "bugninja",
+    # "bugninja @ git+https://github.com/bugninja-ai/bugninja-experiment@akos/experimenting-with-browser-use",
     "celery[redis]==5.5.3",
     "cssselect==1.3.0",
     "cuid2==2.0.1",
@@ -50,8 +50,8 @@ dev-dependencies = [
     "mypy==1.16.0",
 ]
 
-[tool.uv.sources]
-bugninja = { git = "https://github.com/bugninja-ai/bugninja-experiment", rev = "akos/experimenting-with-browser-use" }
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.ruff]
 line-length = 100
