--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     build:
       context: .
       dockerfile: infrastructure/docker/backend.Dockerfile
+      secrets:
+        - GIT_TOKEN
     container_name: bugninja-backend
     restart: unless-stopped
     ports:
@@ -54,6 +56,8 @@ services:
       - REDIS_URL=redis://redis:6379
       - API_DEBUG=true
       - API_CORS_ORIGINS=["http://localhost:3000"]
+      - AZURE_OPENAI_ENDPOINT=${AZURE_OPENAI_ENDPOINT}
+      - AZURE_OPENAI_KEY=${AZURE_OPENAI_KEY}
     command: >
       sh -c "
         mkdir -p /app/content/run_gifs /app/content/run_he_screenshots
@@ -63,6 +67,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    secrets:
+      - GIT_TOKEN
+      - AZURE_OPENAI_ENDPOINT
+      - AZURE_OPENAI_KEY
 
   # Frontend React Application
   frontend:
@@ -92,4 +100,12 @@ volumes:
 
 networks:
   default:
-    name: bugninja-network 
+    name: bugninja-network
+
+secrets:
+  GIT_TOKEN:
+    file: ./infrastructure/secrets/GIT_TOKEN
+  AZURE_OPENAI_ENDPOINT:
+    file: ./infrastructure/secrets/AZURE_OPENAI_ENDPOINT
+  AZURE_OPENAI_KEY:
+    file: ./infrastructure/secrets/AZURE_OPENAI_KEY
