docker cleanup (keys + entrypoint)

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,17 @@ GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
 
 # =================
+# Azure OpenAI Configuration
+# =================
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_KEY=your-azure-openai-api-key
+
+# =================
+# Git Token for Private Repositories
+# =================
+GIT_TOKEN=your-github-personal-access-token
+
+# =================
 # Monitoring & Logging
 # =================
 LOG_LEVEL=INFO
