--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,17 +13,20 @@ dependencies = [
     "celery[redis]==5.5.3",
     "cssselect==1.3.0",
     "cuid2==2.0.1",
+    "docx2txt==0.8",
     "faker==37.4.0",
     "fastapi==0.115.13",
     "hypercorn==0.17.3",
     "isort==6.0.1",
     "lxml==5.4.0",
     "openai==1.84.0",
+    "pandas==2.2.3",
     "polyfactory>=2.22.0",
     "psycopg2-binary==2.9.10",
     "pydantic==2.10.6",
     "pydantic-settings==2.10.1",
     "python-dotenv==1.1.0",
+    "python-multipart==0.0.19",
     "rich==14.0.0",
     "ruff==0.11.13",
     "sqlalchemy==2.0.41",
